@@ -1,21 +1,31 @@
 package Presentation.Controllers;
 
 import Presentation.Model.*;
+import Presentation.Model.Messages.AddToCartMessage;
+import Presentation.Model.Messages.CheckoutFormMessage;
+import Presentation.Model.Messages.NotificationMessage;
+import Presentation.Model.Messages.RegisterMessage;
 import Service.Services;
 import domain.Response;
 import domain.ResponseList;
+import domain.ResponseMap;
 import domain.ResponseT;
+import domain.notifications.Message;
+import domain.notifications.SystemInfoMessage;
+import domain.shop.Order;
 import domain.shop.Shop;
 import domain.user.Cart;
 import domain.user.User;
+import domain.user.filter.SearchOrderFilter;
+import domain.user.filter.SearchShopFilter;
 import io.javalin.http.Context;
 import io.javalin.websocket.WsConfig;
-import io.javalin.websocket.WsMessageContext;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import javax.naming.AuthenticationException;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class UserController {
 
@@ -27,11 +37,15 @@ public class UserController {
         services = Services.getInstance();
     }
 
+    public PresentationUser getUser(String username) {
+        return requestedUsers.get(username);
+    }
 
     public void login(Context ctx) {
+        String guest = ctx.cookieStore("uid");
         String username = ctx.formParam("username");
         String password = ctx.formParam("password");
-        ResponseT<User> response = services.Login(username, password,null);
+        ResponseT<User> response = services.Login(guest, username, password, null);
         if (response.isErrorOccurred()) {
             int errorCode = 401;
             ctx.status(errorCode);
@@ -42,6 +56,7 @@ public class UserController {
             synchronized (requestedUsers) {
                 requestedUsers.put(user.getUsername(), user);
             }
+
             ctx.cookieStore("uid", user.getUsername());
             ctx.redirect("/");
         }
@@ -61,7 +76,7 @@ public class UserController {
         ResponseT<User> response = services.GetUser(username);
         if (response.isErrorOccurred()) {
             ctx.status(503);
-            ctx.render("errorPage.jte", Collections.singletonMap("errorMessage", response.errorMessage));
+            ctx.render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 503));
             return null;
         }
         PresentationUser user = new PresentationUser(response.getValue());
@@ -77,8 +92,8 @@ public class UserController {
         });
 
         wsConfig.onMessage(ctx -> {
-            PresentationUser requestedUser = ctx.messageAsClass(PresentationUser.class);
-            Response response = services.Register(requestedUser.getUsername(), requestedUser.getPassword());
+            RegisterMessage message = ctx.messageAsClass(RegisterMessage.class);
+            Response response = services.Register(message.getGuestUsername(), message.getUsername(), message.getPassword());
             ctx.send(response);
         });
     }
@@ -114,7 +129,7 @@ public class UserController {
         PresentationUser user = getUser(ctx);
         ResponseT<Cart.ServiceCart> response = services.ShowCart(user.getUsername());
         if (response.isErrorOccurred()) {
-            ctx.status(400).render("errorPage.jte", Collections.singletonMap("errorMessage", response.errorMessage));
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
         }
         PresentationCart cart = new PresentationCart(response.getValue());
         //update final price after discounts for each product in cart
@@ -127,22 +142,22 @@ public class UserController {
         int shopID = ctx.formParamAsClass("shopID", Integer.class).get();
         int serialNumber = ctx.pathParamAsClass("serialNumber", Integer.class).get();
         int quantity = ctx.formParamAsClass("quantity", Integer.class).get();
-        Response response = services.EditShoppingCart(username,shopID,serialNumber,quantity);
-        if(response.isErrorOccurred())
-            ctx.status(400).render("errorPage.jte", Collections.singletonMap("errorMessage", response.errorMessage));
+        Response response = services.EditShoppingCart(username, shopID, serialNumber, quantity);
+        if (response.isErrorOccurred())
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
 
-        ctx.redirect(String.format("/users/%s/cart",username));
+        ctx.redirect(String.format("/users/%s/cart", username));
     }
 
     public void removeFromCart(Context ctx) {
         String username = ctx.pathParam("id");
         int shopID = ctx.formParamAsClass("shopID", Integer.class).get();
         int serialNumber = ctx.pathParamAsClass("serialNumber", Integer.class).get();
-        Response response = services.RemoveFromShoppingCart(username,shopID,serialNumber);
-        if(response.isErrorOccurred())
-            ctx.status(400).render("errorPage.jte", Collections.singletonMap("errorMessage", response.errorMessage));
+        Response response = services.RemoveFromShoppingCart(username, shopID, serialNumber);
+        if (response.isErrorOccurred())
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
 
-        ctx.redirect(String.format("/users/%s/cart",username));
+        ctx.redirect(String.format("/users/%s/cart", username));
     }
 
     public void validateUser(Context ctx) {
@@ -150,7 +165,7 @@ public class UserController {
             ResponseT<User> response = services.EnterMarket();
             if (response.isErrorOccurred()) {
                 ctx.status(503);
-                ctx.render("errorPage.jte", Collections.singletonMap("errorMessage", response.errorMessage));
+                ctx.render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 503));
             } else {
                 PresentationUser user = new PresentationUser(response.getValue());
                 ctx.cookieStore("uid", user.getUsername());
@@ -158,19 +173,26 @@ public class UserController {
         }
     }
 
-    public void renderCheckoutForm(Context ctx){
+    public void renderCheckoutForm(Context ctx) {
         PresentationUser user = getUser(ctx);
         ctx.render("checkoutForm.jte", Map.of("user", user));
     }
 
-    public void checkout(WsConfig wsConfig){
-        wsConfig.onMessage(ctx ->{
+    public void checkout(WsConfig wsConfig) {
+        wsConfig.onMessage(ctx -> {
             String username = ctx.pathParam("id");
-            CheckoutForm checkout = ctx.messageAsClass(CheckoutForm.class);
-            String expirationDate = checkout.getMonth() +"/" + checkout.getYear();
-            ResponseList<String> response = services.Checkout(username,checkout.getFullName(), checkout.getAddress(), checkout.getPhoneNumber(), checkout.getCardNumber(),expirationDate);
-            ctx.send(response.getValue());
-                });
+            CheckoutFormMessage checkout = ctx.messageAsClass(CheckoutFormMessage.class);
+            String expirationDate = checkout.getMonth() + "/" + checkout.getYear();
+            ResponseList<String> response = services.Checkout(username, checkout.getFullName(), checkout.getAddress(), checkout.getPhoneNumber(), checkout.getCardNumber(), expirationDate);
+            StringBuilder error = new StringBuilder(response.isErrorOccurred() ? response.errorMessage : "");
+            if (response.getValue().size() > 0) {
+                for (String s : response.getValue()) {
+                    error.append("/n").append(s);
+                }
+
+            }
+            ctx.send(error);
+        });
 
     }
 
@@ -183,6 +205,220 @@ public class UserController {
                 p.setFinalPrice(s.productPriceAfterDiscounts(p.serialNumber, productAmount.get(p)));
             }
         }
+    }
+
+    public void renderUserOrderHistory(Context ctx) {
+        PresentationUser user = getUser(ctx);
+
+        SearchOrderFilter filter = getOrderFilter(ctx);
+        ResponseList<Order> response = services.getOrderHistoryOfUser(user.getUsername(), filter);
+
+        if (response.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
+        }
+
+        Double minPrice = filter.getMinPrice();
+        Double maxPrice = filter.getMaxPrice();
+        String minDate = filter.getMinDate() == null? "" : filter.getMinDate().format(DateTimeFormatter.ISO_LOCAL_DATE);
+        String maxDate = filter.getMaxDate() == null? "" : filter.getMaxDate().format(DateTimeFormatter.ISO_LOCAL_DATE);
+
+        List<PresentationOrder> orders = response.getValue().stream().map(PresentationOrder::new).collect(Collectors.toList());
+        ctx.render("userOrderHistory.jte", Map.of("user", user, "orders", orders, "minPrice", minPrice, "maxPrice", maxPrice, "minDate", minDate, "maxDate", maxDate));
+
+    }
+
+    public void renderUserShops(Context ctx) {
+        PresentationUser user = getUser(ctx);
+
+        SearchShopFilter filter = getShopFilter(ctx);
+        String name = filter.getName() == null? "": filter.getName();
+
+        ResponseList<Shop> response = services.GetAllUserShops(user.getUsername(), filter);
+        if (response.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
+        }
+
+        List<PresentationShop> shops = response.getValue().stream().map(PresentationShop::new).collect(Collectors.toList());
+        ctx.render("userShops.jte", Map.of("user", user, "shops", shops, "filteredName", name));
+    }
+
+    public void checkUser(Context context) throws AuthenticationException {
+        PresentationUser currentUser = getUser(context);
+        String requestedUsername = context.pathParam("id");
+        if (!currentUser.getUsername().equals(requestedUsername)) {
+            throw new AuthenticationException("you don't have privilege to view this page");
+        }
+    }
+
+
+    public void renderAdminPage(Context ctx) {
+        PresentationUser user = getUser(ctx);
+        String username = user.getUsername();
+
+        ResponseMap<Integer, User> users = services.getAllUsers(username);
+        ResponseT<Integer> activeUsers = Services.getInstance().getCurrentActiveUsers(username);
+        ResponseT<Integer> activeMembers = Services.getInstance().getCurrentActiveMembers(username);
+        ResponseT<Integer> activeGuests = Services.getInstance().getCurrentActiveGuests(username);
+        ResponseT<Integer> totalRegistered = Services.getInstance().getTotalMembers(username);
+
+        if (users.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", users.errorMessage, "status", 400));
+        } else if (activeUsers.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", activeUsers.errorMessage, "status", 400));
+        } else if (activeMembers.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", activeMembers.errorMessage, "status", 400));
+        } else if (activeGuests.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", activeGuests.errorMessage, "status", 400));
+        } else if (totalRegistered.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", totalRegistered.errorMessage, "status", 400));
+        } else if (!user.isAdmin()) {
+            String errorMessage = "you don't have privilege to view this page";
+            ctx.status(403).render("errorPage.jte", Map.of("errorMessage", errorMessage, "status", 403));
+        } else {
+            Map<Integer, PresentationUser> presentationUsers = new HashMap<>();
+            for (Integer i : users.getValue().keySet()
+            ) {
+                presentationUsers.put(i, new PresentationUser(users.getValue().get(i)));
+            }
+            ctx.render("adminManagingPage.jte", Map.of("admin", user, "users", presentationUsers, "activeUsers", activeUsers.getValue(), "activeMembers", activeMembers.getValue(), "activeGuests", activeGuests.getValue(), "totalRegistered", totalRegistered.getValue()));
+        }
+    }
+
+    public void messagesHandler(WsConfig wsConfig) {
+        Map<NotificationMessage, Message> sentMessages = new HashMap<>();
+        wsConfig.onConnect(ctx -> {
+            PresentationUser currentUser = getUser(ctx.pathParam("id"));
+            Response response = services.registerForMessages(currentUser.getUsername(), (message) -> {
+                if (message.getAddressee().getUserName().equals(currentUser.getUsername())) {
+                    NotificationMessage notification = new NotificationMessage(message);
+                    sentMessages.put(notification, message);
+                    ctx.send(notification);
+                }
+            });
+            if (response.isErrorOccurred()) {
+                ctx.send(response);
+            }
+        });
+
+        wsConfig.onMessage(ctx -> {
+            NotificationMessage message = ctx.messageAsClass(NotificationMessage.class);
+            if (sentMessages.containsKey(message)) {
+                Message m = sentMessages.get(message);
+                m.markAsRead();
+            }
+
+        });
+
+        wsConfig.onClose(ctx -> {
+            PresentationUser currentUser = getUser(ctx.cookie("uid"));
+            services.removeFromNotificationCenter(currentUser.getUsername());
+        });
+
+
+    }
+
+    public void renderInbox(Context context) {
+        PresentationUser user = getUser(context);
+        context.render("inbox.jte", Map.of("user", user));
+    }
+
+    public void getMessagesCount(WsConfig wsConfig) {
+        wsConfig.onConnect(ctx -> {
+            PresentationUser currentUser = getUser(ctx.pathParam("id"));
+            Response response = services.registerForMessages(currentUser.getUsername(), (message) -> {
+                ResponseT<Long> numberOfUnreadMessages = services.getNumberOfUnreadMessages(currentUser.getUsername());
+                if (!numberOfUnreadMessages.isErrorOccurred()) {
+                    ctx.send(numberOfUnreadMessages.getValue());
+                }
+            });
+        });
+    }
+
+    public void getSystemInfo(WsConfig wsConfig) {
+        wsConfig.onConnect(ctx -> {
+            PresentationUser currentUser = getUser(ctx.pathParam("id"));
+            String username = currentUser.getUsername();
+
+            Response response = services.registerForAdminMessages(username, () -> {
+                ResponseT<Integer> currentActiveUsers = Services.getInstance().getCurrentActiveUsers(username);
+                ResponseT<Integer> currentActiveMembers = Services.getInstance().getCurrentActiveMembers(username);
+                ResponseT<Integer> currentActiveGuests = Services.getInstance().getCurrentActiveGuests(username);
+                ResponseT<Integer> totalRegistered = Services.getInstance().getTotalMembers(username);
+                ResponseMap<Integer, User> users = Services.getInstance().getAllUsers(username);
+
+                Map<Integer, PresentationUser> presentationUsers = new HashMap<>();
+                for (Integer i : users.getValue().keySet()
+                ) {
+                    presentationUsers.put(i, new PresentationUser(users.getValue().get(i)));
+
+                }
+                SystemInfoMessage message = new SystemInfoMessage(currentActiveUsers.getValue(), currentActiveMembers.getValue(), currentActiveGuests.getValue(), totalRegistered.getValue(), presentationUsers);
+                ctx.send(message);
+            });
+
+        });
+    }
+
+    public void deleteUserPermanently(Context ctx) {
+        String admin = ctx.pathParam("id");
+        String username = ctx.formParam("username");
+        Response response = services.DeleteUser(admin, username);
+        if (response.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", response.errorMessage, "status", 400));
+        } else {
+            String path = "/admin/" + admin + "/systemMonitor";
+            ctx.redirect(path);
+        }
+    }
+
+    public void renderAllHistorySales(Context ctx) {
+        PresentationUser user = getUser(ctx);
+        String username = user.getUsername();
+        ResponseMap<User, List<Order>> usersResponse = services.getOrderHistoryForUsers(username, new SearchOrderFilter(), null);
+        ResponseMap<Shop, List<Order>> shopsResponse = services.getOrderHistoryForShops(username, new SearchOrderFilter(), null);
+
+        if (usersResponse.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", usersResponse.errorMessage, "status", 400));
+        } else if (shopsResponse.isErrorOccurred()) {
+            ctx.status(400).render("errorPage.jte", Map.of("errorMessage", usersResponse.errorMessage, "status", 400));
+        } else if (!user.isAdmin()) {
+            String errorMessage = "you don't have privilege to view this page";
+            ctx.status(403).render("errorPage.jte", Map.of("errorMessage", errorMessage, "status", 403));
+        }
+
+        Map<PresentationUser, List<PresentationOrder>> usersHistory = new HashMap<>();
+        for (User u : usersResponse.getValue().keySet()) {
+            List<PresentationOrder> orders = usersResponse.getValue().get(u).stream().map(PresentationOrder::new).collect(Collectors.toList());
+            usersHistory.put(new PresentationUser(u), orders);
+        }
+
+        Map<PresentationShop, List<PresentationOrder>> shopHistory = new HashMap<>();
+        for (Shop s : shopsResponse.getValue().keySet()) {
+            List<PresentationOrder> orders = shopsResponse.getValue().get(s).stream().map(PresentationOrder::new).collect(Collectors.toList());
+            shopHistory.put(new PresentationShop(s), orders);
+        }
+
+        ctx.render("allSalesHistory.jte", Map.of("user", user, "userOrders", usersHistory, "shopOrders", shopHistory));
+    }
+
+    protected SearchOrderFilter getOrderFilter(Context ctx) {
+        Double minPrice = ctx.queryParamAsClass("minPrice", Double.class).getOrDefault(null);
+        Double maxPrice = ctx.queryParamAsClass("maxPrice", Double.class).getOrDefault(null);
+        String min_date = ctx.queryParam("minDate");
+        String max_date = ctx.queryParam("maxDate");
+
+
+        LocalDate minDate = min_date == null || min_date.isEmpty() ? null: LocalDate.parse(min_date);
+        LocalDate maxDate = max_date == null || max_date.isEmpty() ? null: LocalDate.parse(max_date);
+
+
+        return new SearchOrderFilter(minPrice, maxPrice, minDate, maxDate);
+    }
+
+    protected SearchShopFilter getShopFilter(Context ctx){
+        String shopName = ctx.queryParam("shopName");
+        shopName = shopName == null || shopName.isEmpty()? null : shopName;
+        return new SearchShopFilter(shopName,null);
     }
 
 }
